<resources>
    <string name="ACTION_TTS">com.navibees.sdk.tts</string>
    <string name="PAUSE_TTS">PAUSE_TTS</string>
    <string name="TTS_PAUSE_END_VALUE">com.navibees.sdk.tts.pause.end</string>
    <string name="TTS_PAUSE_ERROR_VALUE">com.navibees.sdk.tts.pause.error</string>
    <string name="TTS_PAUSE_KEY">com.navibees.sdk.tts.pause</string>
    <string name="TTS_PAUSE_START_VALUE">com.navibees.sdk.tts.pause.start</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_av">Averos helps its customers track in real-time their people, staff and their valuable assets and thereby improving their operational efficiency. Averos provides standard and bespoke solutions to meet its customers\' specific needs and helping them to integrate into existing enterprise system.\10Averos offers optimised quality, reliable and high performance complete sensor based systems solutions for Real-time location based systems covering asset and logistics tracking, traffic management and crowd management market needs. Averos specialises in providing innovative and intelligent multiple sensors and communication links platform.\10Amongst our many patented technologies, it features an advanced object, crowd and traffic monitoring and tracking system using wireless technologies (such as WiFi, Bluetooth, GSM, RFID, …) that are integrated in most smart mobile devices. This provides for cost-effective and versatile tracking systems solution.</string>
    <string name="about_averos">About Averos</string>
    <string name="about_wadimakkah">About King Fahad Medical City</string>
    <string name="about_wm">King Fahad Medical City \"KFMC\" started as a pioneering idea that came true. The idea was adopted by King Fahad bin Abdulaziz. The Prince of Riyadh region then, King Salman bin Abdulaziz laid the foundation stone of KFMC in 1403, corresponding to 1983. KFMC came into operation in the era of the Custodian of the Two Holy Mosques, King Fahad bin Abdulaziz, where King Abdullah bin Abdulaziz, Crown Prince then, inaugurated it on 21/08/1425 H, corresponding to 05/10/2004\10\10KFMC has a strategic location in the heart of Riyadh city, capital of Saudi Arabia. KFMC is one of the largest and fastest growing medical complexes in the Middle East with a total capacity of (1200) beds. It has a highly qualified and efficient Technical Management Team, all are engaged to achieve one goal: making KFMC a benchmark in the medical care, to which all patients from all over the region are referred to, for all treatment levels where medical and professional competencies of different disciplines are gathered to provide assistance to patients, who are estimated annually by more than 30,000 inpatients and 500,000 outpatients. As KFMC working environment has qualified employees, it provides more quality care and commitment to overall quality in dealing with the patients; in addition to achieving one of KFMC\'s priorities that is to spread knowledge, the culture of development and achievement in the community.\10\10KFMC witnessed several historical phases:\10\10The first phase was the operation of the largest medical city in the Middle East, comprising four hospitals, four medical centers, and various supporting administrations.\10\10The second phase was to ensure that KFMC is the benchmark for specialized medical services at all levels to treat incurable diseases, taking advantage of the latest technologies in the world, coupled with strategic partnerships with global industrial and medical sectors. Despite such a progress, KFMC decisions remain revolving around the royal directives to focus on the citizen, and in line with the slogan of the Ministry of Health (Citizen Health First), using the latest technologies in the treatment of the patient.\10KFMC is proud of its highly qualified medical, technical and administrative Saudi staff.\10Scholarships in the most prestigious universities in the world are annually granted by KFMC to many students and trainees. The Medical City also holds dozens of international scientific conferences, medical and educational events, and various workshops. All these vital elements are employed by KFMC to crystallize its mission towards the community by providing safe and specialized healthcare based on scientific evidence and supported by education, training, and research. KFMC has achieved many accomplishment and international accreditations and won several international awards over the past years. The Medical City will continue this approach to be a regional and global benchmark in the field of specialized medical services.</string>
    <string name="agenda">Agenda</string>
    <string name="all_tab_title">All</string>
    <string name="app_name">Demo Navigator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arabicSample">موقع</string>
    <string name="asr">Asr</string>
    <string name="asr_ar">العصر</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_preview_travel_time_min_label">%1$s min</string>
    <string name="bottom_sheet_preview_travel_time_sec_label">%1$s sec</string>
    <string name="bottom_sheet_remaining_travel_length_label">%1$sm</string>
    <string name="bubbleViewTitle">Options</string>
    <string name="building_button_label">%1$s\10Building</string>
    <string name="chairperson">Chairperson</string>
    <string name="change_language">Change language and restart application</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clearRoute">Clear Route</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Closed</string>
    <string name="close_now">Close Now</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="com_navibees_sdk_preference_portal_elevator_key">com.navibees.sdk.portal.elevator</string>
    <string name="com_navibees_sdk_preference_portal_escalator_key">com.navibees.sdk.portal.escalator</string>
    <string name="com_navibees_sdk_preference_portal_stair_key">com.navibees.sdk.portal.stair</string>
    <string name="com_navibees_sdk_preference_user_enabled_tts_key">com.navibees.sdk.preference.user.enabled.tts.key</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="monday">Monday</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="preference_category_language_title">Language</string>
    <string name="preference_category_portal_summary">Enable/Disabled portals according to your preferences used in routing</string>
    <string name="preference_category_portal_title">Preferred Portals</string>
    <string name="preference_category_tts_title">Navigation Options</string>
    <string name="preference_gender">Gender</string>
    <string name="preference_portal_elevator_title">Elevator</string>
    <string name="preference_portal_escalator_title">Escalator</string>
    <string name="preference_portal_stair_title">Stair</string>
    <string name="preference_preferred_language">Preferred language</string>
    <string name="preference_preferred_language_key">com.navibees.source.multivenuessample.language</string>
    <string name="preference_select_gender">Select Gender</string>
    <string name="preference_tts_enabled_by_user">Listen to navigation instructions</string>
    <string name="preference_tts_summary">Listen to navigation instructions</string>
    <string name="saveThisLocation">Save This Location</string>
    <string name="setStartPosition">Set Start Navigation Point</string>
    <string name="shareLocationCancel">Cancel</string>
    <string name="shareMyLocation">Share My Current Location</string>
    <string name="shareThisLocation">Share This Location</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="titleRouteFrom">Set Origin</string>
    <string name="titleRouteStop">Set Waypoint</string>
    <string name="titleRouteTo">Set Destination</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
</resources>