<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/dialog_frame" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@+id/textViewBubbleTitle" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/bubbleViewTitle" android:maxLines="1" android:minLines="1" android:layout_weight="0.94"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textColor="@android:color/white" android:id="@+id/buttonSetStartPosition" android:background="@drawable/selector_button_blue" android:visibility="gone" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/setStartPosition" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonSaveLocation" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/saveThisLocation" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonShareThisLocation" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/shareThisLocation" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonShareMyLocation" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/shareMyLocation" android:layout_weight="1" android:textAllCaps="false"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonShareLocationCancel" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/shareLocationCancel" android:layout_weight="1" android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
