<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/dialog_frame" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@+id/imageViewGo" android:background="@drawable/dialog_info" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@+id/textViewBubble" android:layout_width="0dp" android:layout_height="match_parent" android:text="PlaceName" android:maxLines="1" android:minLines="1" android:layout_weight="0.94"/>
        <ImageButton android:layout_gravity="right" android:id="@+id/imageViewClose" android:background="@drawable/dialog_close" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
        <Button android:textColor="@android:color/white" android:id="@+id/buttonRouteFrom" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/titleRouteFrom" android:layout_weight="1"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonRouteStop" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/titleRouteStop" android:layout_weight="1"/>
        <Button android:textColor="@android:color/white" android:id="@+id/buttonRouteTo" android:background="@drawable/selector_button_blue" android:layout_width="match_parent" android:layout_height="40dp" android:layout_margin="5dp" android:text="@string/titleRouteTo" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
