<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:onClick="aboutWadiMakkah" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" app:srcCompat="@drawable/ic_fwd"/>
    <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:onClick="aboutAveros" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/view1" app:srcCompat="@drawable/ic_fwd"/>
    <ImageView android:id="@+id/imageView3" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:onClick="openingHours" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/view2" app:srcCompat="@drawable/ic_fwd"/>
    <TextView android:textSize="20sp" android:textColor="#000" android:id="@+id/textView1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/about_wadimakkah" android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/view1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"/>
    <TextView android:textSize="20sp" android:textColor="#000" android:id="@+id/textView2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/about_averos" android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/view2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/view1"/>
    <TextView android:textSize="20sp" android:textColor="#000" android:id="@+id/textView3" android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/opening_hours" android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/view3" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/view2"/>
    <View android:id="@+id/view1" android:background="#ccc" android:layout_width="0dp" android:layout_height="1dp" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView1"/>
    <View android:id="@+id/view2" android:background="#ccc" android:layout_width="0dp" android:layout_height="1dp" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <View android:id="@+id/view3" android:background="#ccc" android:visibility="invisible" android:layout_width="0dp" android:layout_height="1dp" android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <com.google.android.material.appbar.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/app_bar_layout" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:background="?attr/colorPrimary" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
